Revert "added controller tests and other changes"
This reverts commit 1101e2fafd44037e008e1e34bf98082774b0d469.